# pyrealm

./: .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .pyproject.toml.swp  .readthedocs.yml  .travis.yml  CHANGES.md  CHANGES.txt  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  performance_regression_checking.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pre-commit_autoupdate.yaml  pyrealm_ci.yaml  pyrealm_profiling.yaml  pyrealm_profiling_after_push.yaml  pyrealm_profiling_on_approve.yaml  pyrealm_profiling_without_benchmarking.yaml  pyrealm_publish.yaml
data/: __init__.py  params.yaml  subdaily_BE_Vie_2014.csv
docs/source/: _toc.yml  bounds_checking.md  conf.py  constants.md  hygro.md  index.md  params.md  refs.bib  utilities.md  z_bibliography.rst
profiling/: benchmark-fails.csv  performance_regression_checking.sh  prof-report.csv  profiling-database.csv  profiling.prof  report.py  run_benchmarking.py  simple_benchmarking.py
pypmodel/: params.py  pmodel.py  version.py
pypmodel/data/: params.yaml
pyrealm/: C3C4model.py  __init__.py  bounds_checker.py  bounds_checking.py  community_sketch.py  constrained_array.py  hygro.py  param_classes.py  params.py  pmodel.py  t_model_functions.py  t_model_utils.py  tmodel.py  typing.py  utilities.py  version.py
pyrealm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyrealm/canopy_model/: base_objects.py  canopy.py  community.py  community_sketch.py  deserialisation.py
pyrealm/community_model/: __init__.py  community_sketch.py
pyrealm/constants/: __init__.py  base.py  competition_const.py  core_const.py  hygro_const.py  isotope_const.py  phenology_const.py  pmodel_const.py  tmodel_const.py  two_leaf.py  two_leaf_canopy.py
pyrealm/core/: __init__.py  bounds.py  calendar.py  experimental.py  hygro.py  pressure.py  scaler.py  solar.py  time_series.py  utilities.py  water.py  xarray.py
pyrealm/data/: params.yaml
pyrealm/demography/: __init__.py  canopy.py  canopy_functions.py  community.py  core.py  crown.py  flora.py  t_model_functions.py  t_model_functions_extra.py  tmodel.py
pyrealm/phenology/: __init__.py  fapar_limitation.py  growing_season.py
pyrealm/pmodel/: CalcOptimalChi.py  JmaxLimitation.py  PModel.py  PModelEnvironment.py  __init__.py  acclimation.py  arrhenius.py  calc_optimal_chi.py  calc_optimal_chi_new.py  competition.py  fast_slow_scaler.py  functions.py  isotopes.py  jmax_limitation.py  new_pmodel.py  new_subdaily.py  optimal_chi.py  pmodel.py  pmodel_environment.py  quantum_yield.py  scaler.py  subdaily.py  subdaily_scaler.py  two_leaf.py  two_leaf_irradience.py
pyrealm/splash/: __init__.py  const.py  evap.py  logger.py  solar.py  splash.py  utilities.py
pyrealm/subdaily/: __init__.py  daily_values.py  interpolators.py  subdaily.py
pyrealm_build_data/: .gitignore  __init__.py  data_model.nc  inputs_data_24.25.nc  synth.py  synth_data.py
pyrealm_build_data/LAI_in_pyrealm/: .gitignore  __init__.py  fapar_limitation_example.py  faparlim_data_io.py  faparlim_input.nc  fluxnet_reducer.py  pyrealm_implementation.py  splash_extractor.py
pyrealm_build_data/bigleaf/: __init__.py  bigleaf_conversions.R  bigleaf_test_values.json
pyrealm_build_data/community/: __init__.py  communities.csv  communities.json  communities.toml  community.csv  community.json  community.toml  pfts.csv  pfts.json  pfts.toml  pfts_invalid.csv  pfts_invalid.json  pfts_invalid.toml  pfts_partial.csv  pfts_partial.json  pfts_partial.toml
pyrealm_build_data/phenology/: DE-GRI_site_data.json  DE_Gri_Grassland_example_subset.csv  DE_gri_splash_cru_ts4.07_2000_2019.nc  __init__.py  fluxnet_reducer.py  python_annual_outputs.csv  python_daily_outputs.csv  python_implementation.py  splash_extractor.py
pyrealm_build_data/rpmodel/: __init__.py  generate_test_inputs.py  rpmodel_global_gpp_no_ftkphio.nc  test_inputs.json  test_outputs_rpmodel.json
pyrealm_build_data/sandoval_kphio/: __init__.py  calc_phi0.R  create_test_inputs.R  sandoval_kphio.csv
pyrealm_build_data/splash/: README.md  __init__.py  generate_splash_regression_outputs.sh  run_one_day_output.csv  splash_make_example.py  splash_make_flux_benchmark_inputs.py  splash_make_spatial_grid_data.py  splash_run_calc_daily_fluxes.py  splash_run_time_series_parallel.py  splash_sf_example_to_netcdf.py  splash_test_example_out.nc
pyrealm_build_data/subdaily/: __init__.py
pyrealm_build_data/t_model/: __init__.py  pft_definitions.csv  rtmodel_output.csv  rtmodel_output_alt_one.csv  rtmodel_output_alt_two.csv  rtmodel_output_default.csv  rtmodel_test_outputs.r  rtmodel_unit_testing.csv  t_model.r
pyrealm_build_data/two_leaf/: BE-Vie_merge.py  TwoLeaf_Python_versus_R.md  Untitled.ipynb  __init__.py  data_Beni2_BE-Vie_2014.csv  data_LAI_BE-Vie_2014.csv  df_Vie_forcing-data-trial.csv  merged_BE-Vie_data.csv  radiative-transfer-model_kjb-draft03.R  two_leaf_R_implementation_outputs.csv  two_leaf_implementation.ipynb  two_leaf_python.md
pyrealm_build_data/uk_data/: __init__.py  create_2D_uk_inputs.py
source/: Build_Notes.md  bibliography.rst  bounds_checking.md  chi_inputs.md  conf.py  constrained_arrays.md  index.md  index.rst  params.md  params.rst  pmodel.md  pmodel.rst  pyrealm.md  refs.bib  requirements.txt  rpmodel.md  soilmoisture.md  utilities.md
source/pmodel/: c3c4model.md  envt_variation_outputs.md  estimating_productivity.md  extreme_values.md  global_example.md  iabs_scaling.md  isotopic_discrimination.md  lue_limitation.md  lue_vcmax.md  optimal_chi.md  photosynthetic_environment.md  pmodel.md  pmodel_reference.md  rpmodel.md  soil_moisture.md
source/tmodel/: tmodel.md  tmodel_reference.md
test/: test_inputs.yaml  test_outputs_rpmodel.R  test_outputs_rpmodel.yaml  test_pmodel.py  test_value_sources.R
test/pmodel/: generate_test_inputs.py  (+9 more)
tests/: __init__.py  conftest.py  test_bounds_checker.py  test_inputs.json  test_profiling.py
(+254 files in other folders)
