[tool.poetry]
name = "pyrealm"
version = "0.9.0"
description = "Python implementations of REALM models"
authors = ["David Orme <d.orme@imperial.ac.uk>"]
homepage = "https://pyrealm.readthedocs.io/"
repository = "https://github.com/davidorme/pyrealm"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha",
]
license = "MIT"
packages = [
    { include = "pyrealm" },
    { include = "pyrealm_build_data", format = "sdist" },
]


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.16.5"
scipy = "^1.7.3"
Bottleneck = "^1.3.5"
tabulate = "^0.8.10"
dacite = "^1.6.0"

[tool.poetry.group.types.dependencies]
types-tabulate = "^0.9.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-flake8 = "^1.1.1"
pytest-cov = "^3.0.0"
pytest-mypy = "^0.9.1"
pytest-mock = "^3.8.1"


[tool.poetry.group.dev.dependencies]
black = { version = "^22.10.0", allow-prereleases = true }
pre-commit = "^2.20.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
mypy = "^0.991"
isort = "^5.12.0"
matplotlib = "^3.5.2"
ipython = "^8.9.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.0.0"
sphinxcontrib-bibtex = "^2.4.2"
myst-nb = "^0.16.0"
sphinx-rtd-theme = "^1.0.0"
autodocsumm = "^0.2.8"
pydocstyle = "^6.1.1"
xarray = "^2023.4.0"
sphinx-external-toc = "^0.3.1"
netcdf4 = "^1.6.3"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
